# agentend

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  fleet.yaml  pyproject.toml
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: budget-bar.tsx  context-panel.tsx  dag-view.tsx  memory-tier.tsx  metric-card.tsx  session-list.tsx  sidebar.tsx  status-bar.tsx  worker-card.tsx
frontend/src/lib/: api.ts  auth.ts  event-types.ts  use-intent.ts  use-sessions.ts
frontend/src/providers/: session-provider.tsx
src/agentend/: __init__.py  config.py
src/agentend/async_/: __init__.py  tasks.py
src/agentend/auth/: __init__.py  jwt.py  middleware.py  rbac.py
src/agentend/budgets/: __init__.py  manager.py
src/agentend/builder/: __init__.py  builder.py  codegen.py  templates.py
src/agentend/cache/: __init__.py  semantic_cache.py
src/agentend/capabilities/: __init__.py  fleet_status.py  memory_inspect.py  metrics_usage.py  sessions_list.py  system_health.py  workflow_status.py
src/agentend/cli/: __init__.py  main.py
src/agentend/connectors/: __init__.py  base.py  cache.py  database.py  logging.py  queue.py  registry.py
src/agentend/events/: __init__.py  stream.py  transport.py  types.py
src/agentend/fleet/: __init__.py  benchmarks.py  config.py  worker.py
src/agentend/guardrails/: __init__.py  engine.py
src/agentend/ingest/: __init__.py  pipeline.py
src/agentend/kernel/: __init__.py  kernel.py  registry.py  router.py
src/agentend/memory/: __init__.py  bus.py  config.py  core_blocks.py  hydration.py  scoring.py  semantic.py  session.py  working.py
src/agentend/observability/: __init__.py  metrics.py  traces.py
src/agentend/orchestrator/: __init__.py  dag.py  hitl.py  workflow.py
src/agentend/persistence/: __init__.py  models.py  repositories.py
src/agentend/plugins/: __init__.py  hooks.py  manager.py
src/agentend/prompts/: __init__.py  middleware.py  slots.py  truncation.py
src/agentend/protocols/: __init__.py  a2a_card.py  a2a_client.py  mcp_aggregator.py  mcp_server.py
src/agentend/security/: __init__.py  output_validator.py  prompt_segregation.py  sanitizer.py
tests/integration/: test_intent_api.py
tests/unit/: test_auth.py  test_capabilities.py  test_config.py  test_events.py  test_memory_working.py  test_plugins.py  test_security.py
(+23 files in other folders)
