[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentend"
version = "0.1.0"
description = "The framework where the agent IS the backend"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Gokulavasan Murali", email = "contact@agentend.dev"}
]
keywords = ["agent", "framework", "backend", "llm", "agentic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0",
    "httpx>=0.25.0",
    "sse-starlette>=1.6.0",
    "typer[all]>=0.9.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
llm = ["litellm>=1.0.0", "instructor>=0.3.0"]
memory = ["redis>=5.0.0", "mem0ai>=0.0.1"]
db = ["sqlalchemy[asyncio]>=2.0.0", "asyncpg>=0.29.0", "pgvector>=0.2.0", "alembic>=1.12.0"]
queue = ["celery>=5.3.0"]
observability = ["opentelemetry-api>=1.20.0", "opentelemetry-sdk>=1.20.0"]
all = ["agentend[llm,memory,db,queue,observability]"]

dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[project.scripts]
agentend = "agentend.cli.main:app"

[project.urls]
Homepage = "https://agentend.ai"
Documentation = "https://agentend.ai/docs"
Repository = "https://github.com/agentend/agentend"
Issues = "https://github.com/agentend/agentend/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentend"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["agentend"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["src/agentend"]
omit = ["*/tests/*", "*/test_*.py"]
